      it is the left-hand parent. (John Arbash Meinel)

    * ``KnitVersionedFiles.get_record_stream()`` will now chose a
      more optimal ordering when the keys are requested 'unordered'.
      Previously the order was fully random, now the records should be
      returned from each pack in turn, in forward I/O order.
      (John Arbash Meinel)

    * New method ``bzrlib.repository.Repository.add_inventory_by_delta``
      allows adding an inventory via an inventory delta, which can be
      more efficient for some repository types. (Robert Collins)

    * Repository ``CommitBuilder`` objects can now accumulate an inventory
      delta. To enable this functionality call ``builder.recording_deletes``
      and additionally call ``builder.record_delete`` when a delete
      against the basis occurs. (Robert Collins)

    * The default http handler has been changed from pycurl to urllib.
      The default is still pycurl for https connections. (The only
      advantage of pycurl is that it checks ssl certificates.)
      (John Arbash Meinel)

    * ``VersionedFiles.get_record_stream()`` can now return objects with a
      storage_kind of ``chunked``. This is a collection (list/tuple) of
      strings. You can use ``osutils.chunks_to_lines()`` to turn them into
      guaranteed 'lines' or you can use ``''.join(chunks)`` to turn it
      into a fulltext. This allows for some very good memory savings when
      asking for many texts that share ancestry, as the individual chunks
      can be shared between versions of the file. (John Arbash Meinel)

    * ``pull -v`` and ``push -v`` use new function
      ``bzrlib.log.show_branch_change`` (Aaron Bentley)



bzr 1.10 2008-12-05
-------------------

Bazaar 1.10 has several performance improvements for copying revisions
(especially for small updates to large projects).  There has also been a
significant amount of effort in polishing stacked branches.  The commands